--- a/history/main/templates/lsson.html
+++ b/history/main/templates/lsson.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
-{% block body %}
+{% block css%}
+<style>
+    content {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        /* transform: translate(-50%, -50%); */
+        width: 50vw;
+    }
+</style>
+{% endblock %}
+{% block main %}
+
+
 
 
 
