--- a/history/auth/templates/signup.html
+++ b/history/auth/templates/signup.html
@@ -1,93 +1,102 @@
-{% extends 'base.html' %}
-{% block css %}
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="{{ url_for('static', filename='signup1-css.css')}}">
-<title>Sign Up - PH KASAYSAYAN</title>
-
-{% endblock %}
-{% block content %}
 
 
-<div class="signup-container">
-    <h2>Create an Account</h2>
-    <form action="" method="post" onsubmit="return validateForm()">
-        {{ forms.hidden_tag() }}
-        <div class="form-group">
-            
-            {{ forms.username.label }}
-            {{ forms.username }}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='signup1-css.css')}}">
+    <title>Sign Up - PH KASAYSAYAN</title>
+</head>
+
+<body>
+    <div class="signup-container">
+        <h2>Create an Account</h2>
+        <form action="" method="post">
+            {{ forms.hidden_tag() }}
+            <div class="form-group">
+                {{ forms.username(placeholder='Username')}}
             </div>
             <div class="form-group">
-            
-                {{ forms.email.label }}
-                {{ forms.email }}
+                {{ forms.email(placeholder='Email')}}
+            </div>
+            <div class="form-group">
+                <div class="password-input">
+                    {{ forms.password(placeholder='Password')}}
+                    {{ forms.confirm_password(placeholder='Confirm_Password')}}
+                    
+                    <input type="password" name="password" id="password" placeholder="Password" required>
+                    <img class="eye" src="{{ url_for('static', filename='./PICS/close.png')}}" onclick="togglePasswordVisibility('password')">
                 </div>
-        <div class="form-group">
-            {{ forms.password.label }}
-            {{ forms.password }}
-        </div>    
-        <div class="form-group">
-            {{ forms.confirm_password.label }}
-            {{ forms.confirm_password }}
-        </div>  
-        
-        {{ forms.submit}}
-    <p>Already have an account? <a href="Login1.php">Login here</a>.</p>
+            </div>
+            <div class="form-group">
+                <div class="password-input">
+                    <input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password" required onkeyup="validatePassword()">
+                    <img class="eye" src="{{ url_for('static', filename='./PICS/close.png')}}" onclick="togglePasswordVisibility('confirm_password')">
+                </div>
+                <label id="password-match-label">Passwords do not match</label>
+            </div>
+            <div class="form-group">
+                {{ forms.submit }}
+            </div>
+        </form>
+        <p>Already have an account? <a href="{{ url_for('/auth.login')}}">Login here</a>.</p>
+    </div>
 
-            <!-- <input type="text" name="username" placeholder="Username" required> -->
-        </div>
- 
-    </form>
-</div>
+    <script>
+        function togglePasswordVisibility(inputId) {
+            var passwordInput = document.getElementById(inputId);
+            var eyeIcon = passwordInput.nextElementSibling; // Get the next sibling, which is the eye icon
 
-<script>
-    function togglePasswordVisibility(inputId) {
-        var passwordInput = document.getElementById(inputId);
-        var eyeIcon = passwordInput.nextElementSibling; // Get the next sibling, which is the eye icon
-
-        if (passwordInput.type === "password") {
-            passwordInput.type = "text";
-            eyeIcon.src = "open.png"; // Change to open eye image
-        } else {
-            passwordInput.type = "password";
-            eyeIcon.src = "close.png"; // Change to closed eye image
+            if (passwordInput.type === "password") {
+                passwordInput.type = "text";
+                eyeIcon.src = "../PICS/open.png"; // Change to open eye image
+            } else {
+                passwordInput.type = "password";
+                eyeIcon.src = "../PICS/close.png"; // Change to closed eye image
+            }
         }
-    }
 
-    function validatePassword() {
-        var password = document.getElementById("password").value;
-        var confirm_password = document.getElementById("confirm_password").value;
-        var passwordMatchLabel = document.getElementById("password-match-label");
+        function validatePassword() {
+            var password = document.getElementById("password").value;
+            var confirm_password = document.getElementById("confirm_password").value;
+            var passwordMatchLabel = document.getElementById("password-match-label");
 
-        if (password !== confirm_password) {
-            passwordMatchLabel.style.display = "block";
-        } else {
-            passwordMatchLabel.style.display = "none";
+            if (password !== confirm_password) {
+                passwordMatchLabel.style.display = "block";
+            } else {
+                passwordMatchLabel.style.display = "none";
+            }
         }
-    }
 
-    function validateForm() {
-        var password = document.getElementById("password").value;
-        var confirm_password = document.getElementById("confirm_password").value;
+        function validateForm() {
+            var password = document.getElementById("password").value;
+            var confirm_password = document.getElementById("confirm_password").value;
 
-        if (password !== confirm_password) {
-            document.getElementById("password-match-label").style.display = "block";
-            return false;
+            if (password !== confirm_password) {
+                document.getElementById("password-match-label").style.display = "block";
+                return false;
+            }
+            return true;
         }
-        return true;
-    }
-</script>
+    </script>
+</body>
+</html>
 
-<!-- <div class="container">
-    <form action="" method="post">
-    {{ forms.hidden_tag()}}
-    <legend>Register</legend>
-    {% for form in forms %}
 
-    <label for=""> {{ form.label }}</label><br>
-    {{ form }}
-    {% endfor %}
-    </form>
-</div> -->
-{% endblock  %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
