--- a/static/base.css
+++ b/static/base.css
@@ -1,5 +1,105 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+	font-family: "Times New Roman", Times, serif;
+	/*border: red 2px solid;*/
+}
+
+body {
+	font-family: Arial, sans-serif;
+    margin: 10px;
+    padding: 0;
+    background-image: url("./PICS/bg1-login1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.container {
+    max-width: 1590px;
+    margin: 0;
+    padding: 0 30px;
+    display: flex;
+   
+    align-items: center;
+}
+
+.container img{
+	margin-left:10px;
+    height:40px;
+	width:40px;
+	background-color:transparent;
+}
+
+header {
+	text-shadow: 2px 2px black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-image: url("./PICS/bg2-login1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
+    z-index: 1000;
+}
+
+header h1 {
+    font-size: 24px;
+	padding: 0px 200px 5px 2px;
+}
+
+#sidebar {
+    position: fixed;
+    top: 64px;
+    left: -250px;
+    width: 250px;
+    height: 92%;
+    background-color: rgba(17, 17, 17, 0.1);
+	backdrop-filter: blur(10px); /* Apply the blur effect */
+    overflow-y: auto;
+    transition: left 0.3s ease;
+}
+
+#sidebar nav {
+    padding-top: 50px;
+}
+
+#sidebar nav ul {
+    list-style-type: none;
+	margin-top:180px;
+    padding: 10px;
+}
+
+#sidebar nav ul li {
+    padding: 5px 0;
+}
+
+#sidebar nav ul li a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 8px 20px;
+    transition: background-color 0.3s ease;
+}
+
+#sidebar nav ul li a:hover {
+	cursor: pointer;
+    background-color: #444;
+}
+
+#sidebar #closeSidebar {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    background-color: #444;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#sidebar #closeSidebar:hover {
+    background-color: #555;
 }
