--- a/static/login1-css.css
+++ b/static/login1-css.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background: #f2f2f2 url("bg1-login1.jpg") no-repeat fixed;
+    background: #f2f2f2 url("./PICS/BGG.jpg") no-repeat fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -80,3 +80,22 @@ body {
     text-decoration: underline;
     color: blue;
 }
+
+/*Forgot Password" button */
+.forgot-password-btn {
+    margin-top: 2px;
+	margin-left: 18px;
+	margin-bottom: 10px;	
+    display: block;
+    text-align: left;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.forgot-password-btn:hover {
+    text-decoration: underline;
+    color: #ccc;
+}
+
