--- a/history/main/templates/lessons/unit1/lesson1.html
+++ b/history/main/templates/lessons/unit1/lesson1.html
@@ -33,7 +33,7 @@ Katulad ng RH Bill, hindi naging madali ang pagpasa ng batas na ito dahil sa mal
 <!-- Add this div at the bottom of the body, above the script tags -->
 <div id="noteContainer" style="display: none;">
     {{ forms.notes }}
-    {{ forms.save }}
+    {{ forms.submit }}
     <button id="cancelNoteBtn">Cancel</button>
 </div>
 
