--- a/history/main/templates/base.html
+++ b/history/main/templates/base.html
@@ -17,7 +17,7 @@
 			<button id="sidebarToggle"><img src="{{ url_for('static', filename='PICS/sidenav1.1.png')}}" alt="Menu"></button>
 			
             <div class="logo">
-            <img src="../{{ url_for('static', filename='PICS/logo1.png') }}" alt="Logo">
+            <img src="{{ url_for('static', filename='PICS/logo1.png') }}" alt="Logo">
             </div>
 			
             <h1>DISCOVERING PHILIPPINE HISTORY</h1>
@@ -43,7 +43,7 @@
     <a href="#mainContent">UNIT 1</a>
     <!-- Toggle dropdown buttons -->
     <div class="topic-buttons">
-        <button class="dropdown-btn">Subtopic 1</button>
+        <a class="dropdown-btn" href="{{ url_for('/.lesson')}}">Lesson 1: Rizal's Law</a>
         <button class="dropdown-btn">Subtopic 2</button>
         <button class="dropdown-btn">Subtopic 3</button>
     </div>
