--- a/history/main/templates/lessons/unit1/lesson1.html
+++ b/history/main/templates/lessons/unit1/lesson1.html
@@ -46,6 +46,6 @@ Katulad ng RH Bill, hindi naging madali ang pagpasa ng batas na ito dahil sa mal
 
 <script>
 
-	const nbtn = document.querySelector('#')
+	// const nbtn = document.querySelector('#')
 </script>
 {% endblock %}
