--- a/history/main/templates/gallery/gallery.html
+++ b/history/main/templates/gallery/gallery.html
@@ -5,7 +5,7 @@
 {% block main%}
 	
 <!-- CONTENTS -->	
-			<main id="mainContent">
+			<main id="mainContent" class="mcnt">
     <section class="content-section">
         <h2>GALLERY</h2>
         <div class="rectangle-container">
@@ -45,7 +45,7 @@
 			<div class="text">UwU</div>
 			</div>
 			
-			<div class="rectangle">
+			<!-- <div class="rectangle">
 			<img src="../PICS/danni.jpg" alt="Image">
 			<div class="text">DANIELLE</div>
 			</div>
@@ -84,7 +84,7 @@
 			<img src="../PICS/haerin.jpg" alt="Image">
 			<div class="text">VANESSA KHANG</div>
 			</div>
-			
+			 -->
         </div>
     </section>
 </main>
