--- a/history/auth/templates/signup.html
+++ b/history/auth/templates/signup.html
@@ -10,6 +10,26 @@
 </head>
 
 <body>
+    <main id="m-container">
+
+    <div class="message-container">
+
+
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+                <li class="message" style="background: red; color: aqua;">
+                    {% for m in message %}
+                        {{ m }}
+                    {% endfor %}
+                </li>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    </ul>
+</div>
+
     <div class="signup-container">
         <h2>Create an Account</h2>
         <form action="" method="post">
@@ -23,17 +43,17 @@
             <div class="form-group">
                 <div class="password-input">
                     {{ forms.password(placeholder='Password')}}
-                    {{ forms.confirm_password(placeholder='Confirm_Password')}}
+                    {{ forms.confirm_password(placeholder='Confirm Password')}}
                     
-                    <input type="password" name="password" id="password" placeholder="Password" required>
+                    <!-- <input type="password" name="password" id="password" placeholder="Password" required> -->
                     <img class="eye" src="{{ url_for('static', filename='./PICS/close.png')}}" onclick="togglePasswordVisibility('password')">
                 </div>
             </div>
             <div class="form-group">
-                <div class="password-input">
+                <!-- <div class="password-input">
                     <input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password" required onkeyup="validatePassword()">
                     <img class="eye" src="{{ url_for('static', filename='./PICS/close.png')}}" onclick="togglePasswordVisibility('confirm_password')">
-                </div>
+                </div> -->
                 <label id="password-match-label">Passwords do not match</label>
             </div>
             <div class="form-group">
@@ -42,6 +62,9 @@
         </form>
         <p>Already have an account? <a href="{{ url_for('/auth.login')}}">Login here</a>.</p>
     </div>
+
+</main>
+
 
     <script>
         function togglePasswordVisibility(inputId) {
