--- a/history/main/templates/lessons/unit1/lesson1.html
+++ b/history/main/templates/lessons/unit1/lesson1.html
@@ -1,8 +1,52 @@
 {% extends 'base_lesson.html' %}
 {% block css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='units/unit1/lesson1.css')}}">
+<style>
+	
+    .audio-player {
+        background: #ffffff;
+        /* position: relative;
+        top: 20%;
+        left: 30%; */
+        position: absolute;
+        top: 10vh;
+        left: 30%;
+        width: 50%;
+        margin: 0 auto;
+        border: 1px solid #ddd;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-bottom: 10rem;
+    }
+    
+    .controls {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .bookmark {
+        position: relative;
+        left: 50%;
+    }
+</style>
 {% endblock %}
 {% block main %}
+
+
+
+<div class="audio-player" >
+	<audio id="audio" >
+		<source src="./lessons/unit1/swamp.ogg" id="audio-source">
+	</audio>
+	<div class="controls">
+		<button id="play-pause" class="play">Play</button>
+		<input type="range" id="seek-bar" value="0">
+		<button id="mute">Mute</button>
+		<input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
+	</div>
+	</div>
 
 <!-- CONTENTS -->	
 			<main id="mainContent">
@@ -42,10 +86,11 @@ Katulad ng RH Bill, hindi naging madali ang pagpasa ng batas na ito dahil sa mal
     <button id="cancelNoteBtn">Cancel</button>
 </div>
 
+<div class="bookmark">
+
+    <button class="bkm-btn"><a href="{{ url_for('/.bookmark_function', pk=lessons.id) }}" target="_blank">Add to bookmark</a></button>
+</div>
+
 <script src="{{ url_for('static', filename='units/unit1/lesson1.js')}}"></script>
 
-<script>
-
-	// const nbtn = document.querySelector('#')
-</script>
 {% endblock %}
